nemu/tools/kconfig/build/parser.output
Grammar

    0 $accept: input $end

    1 input: mainmenu_stmt stmt_list
    2      | stmt_list

    3 mainmenu_stmt: T_MAINMENU T_WORD_QUOTE T_EOL

    4 stmt_list: ε
    5          | stmt_list assignment_stmt
    6          | stmt_list choice_stmt
    7          | stmt_list comment_stmt
    8          | stmt_list config_stmt
    9          | stmt_list if_stmt
   10          | stmt_list menu_stmt
   11          | stmt_list menuconfig_stmt
   12          | stmt_list source_stmt
   13          | stmt_list T_WORD error T_EOL
   14          | stmt_list error T_EOL

   15 stmt_list_in_choice: ε
   16                    | stmt_list_in_choice comment_stmt
   17                    | stmt_list_in_choice config_stmt
   18                    | stmt_list_in_choice if_stmt_in_choice
   19                    | stmt_list_in_choice error T_EOL

   20 config_entry_start: T_CONFIG nonconst_symbol T_EOL

   21 config_stmt: config_entry_start config_option_list

   22 menuconfig_entry_start: T_MENUCONFIG nonconst_symbol T_EOL

   23 menuconfig_stmt: menuconfig_entry_start config_option_list

   24 config_option_list: ε
   25                   | config_option_list config_option
   26                   | config_option_list depends
   27                   | config_option_list help

   28 config_option: type prompt_stmt_opt T_EOL
   29              | T_PROMPT T_WORD_QUOTE if_expr T_EOL
   30              | default expr if_expr T_EOL
   31              | T_SELECT nonconst_symbol if_expr T_EOL
   32              | T_IMPLY nonconst_symbol if_expr T_EOL
   33              | T_RANGE symbol symbol if_expr T_EOL
   34              | T_OPTION T_MODULES T_EOL
   35              | T_OPTION T_DEFCONFIG_LIST T_EOL
   36              | T_OPTION T_ALLNOCONFIG_Y T_EOL

   37 choice: T_CHOICE word_opt T_EOL

   38 choice_entry: choice choice_option_list

   39 choice_end: end

   40 choice_stmt: choice_entry stmt_list_in_choice choice_end

   41 choice_option_list: ε
   42                   | choice_option_list choice_option
   43                   | choice_option_list depends
   44                   | choice_option_list help

   45 choice_option: T_PROMPT T_WORD_QUOTE if_expr T_EOL
   46              | logic_type prompt_stmt_opt T_EOL
   47              | T_OPTIONAL T_EOL
   48              | T_DEFAULT nonconst_symbol if_expr T_EOL

   49 type: logic_type
   50     | T_INT
   51     | T_HEX
   52     | T_STRING

   53 logic_type: T_BOOL
   54           | T_TRISTATE

   55 default: T_DEFAULT
   56        | T_DEF_BOOL
   57        | T_DEF_TRISTATE

   58 if_entry: T_IF expr T_EOL

   59 if_end: end

   60 if_stmt: if_entry stmt_list if_end

   61 if_stmt_in_choice: if_entry stmt_list_in_choice if_end

   62 menu: T_MENU T_WORD_QUOTE T_EOL

   63 menu_entry: menu menu_option_list

   64 menu_end: end

   65 menu_stmt: menu_entry stmt_list menu_end

   66 menu_option_list: ε
   67                 | menu_option_list visible
   68                 | menu_option_list depends

   69 source_stmt: T_SOURCE T_WORD_QUOTE T_EOL

   70 comment: T_COMMENT T_WORD_QUOTE T_EOL

   71 comment_stmt: comment comment_option_list

   72 comment_option_list: ε
   73                    | comment_option_list depends

   74 help_start: T_HELP T_EOL

   75 help: help_start T_HELPTEXT

   76 depends: T_DEPENDS T_ON expr T_EOL

   77 visible: T_VISIBLE if_expr T_EOL

   78 prompt_stmt_opt: ε
   79                | T_WORD_QUOTE if_expr

   80 end: T_ENDMENU T_EOL
   81    | T_ENDCHOICE T_EOL
   82    | T_ENDIF T_EOL

   83 if_expr: ε
   84        | T_IF expr

   85 expr: symbol
   86     | symbol T_LESS symbol
   87     | symbol T_LESS_EQUAL symbol
   88     | symbol T_GREATER symbol
   89     | symbol T_GREATER_EQUAL symbol
   90     | symbol T_EQUAL symbol
   91     | symbol T_UNEQUAL symbol
   92     | T_OPEN_PAREN expr T_CLOSE_PAREN
   93     | T_NOT expr
   94     | expr T_OR expr
   95     | expr T_AND expr

   96 nonconst_symbol: T_WORD

   97 symbol: nonconst_symbol
   98       | T_WORD_QUOTE

   99 word_opt: ε
  100         | T_WORD

  101 assignment_stmt: T_WORD assign_op assign_val T_EOL

  102 assign_op: T_EQUAL
  103          | T_COLON_EQUAL
  104          | T_PLUS_EQUAL

  105 assign_val: ε
  106           | T_ASSIGN_VAL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 13 14 19
    T_HELPTEXT <string> (258) 75
    T_WORD <string> (259) 13 96 100 101
    T_WORD_QUOTE <string> (260) 3 29 45 62 69 70 79 98
    T_ALLNOCONFIG_Y (261) 36
    T_BOOL (262) 53
    T_CHOICE (263) 37
    T_CLOSE_PAREN (264) 92
    T_COLON_EQUAL (265) 103
    T_COMMENT (266) 70
    T_CONFIG (267) 20
    T_DEFAULT (268) 48 55
    T_DEFCONFIG_LIST (269) 35
    T_DEF_BOOL (270) 56
    T_DEF_TRISTATE (271) 57
    T_DEPENDS (272) 76
    T_ENDCHOICE (273) 81
    T_ENDIF (274) 82
    T_ENDMENU (275) 80
    T_HELP (276) 74
    T_HEX (277) 51
    T_IF (278) 58 84
    T_IMPLY (279) 32
    T_INT (280) 50
    T_MAINMENU (281) 3
    T_MENU (282) 62
    T_MENUCONFIG (283) 22
    T_MODULES (284) 34
    T_ON (285) 76
    T_OPEN_PAREN (286) 92
    T_OPTION (287) 34 35 36
    T_OPTIONAL (288) 47
    T_PLUS_EQUAL (289) 104
    T_PROMPT (290) 29 45
    T_RANGE (291) 33
    T_SELECT (292) 31
    T_SOURCE (293) 69
    T_STRING (294) 52
    T_TRISTATE (295) 54
    T_VISIBLE (296) 77
    T_EOL (297) 3 13 14 19 20 22 28 29 30 31 32 33 34 35 36 37 45 46 47 48 58 62 69 70 74 76 77 80 81 82 101
    T_ASSIGN_VAL <string> (298) 106
    T_OR (299) 94
    T_AND (300) 95
    T_EQUAL (301) 90 102
    T_UNEQUAL (302) 91
    T_LESS (303) 86
    T_LESS_EQUAL (304) 87
    T_GREATER (305) 88
    T_GREATER_EQUAL (306) 89
    T_NOT (307) 93


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    input (54)
        on left: 1 2
        on right: 0
    mainmenu_stmt (55)
        on left: 3
        on right: 1
    stmt_list (56)
        on left: 4 5 6 7 8 9 10 11 12 13 14
        on right: 1 2 5 6 7 8 9 10 11 12 13 14 60 65
    stmt_list_in_choice (57)
        on left: 15 16 17 18 19
        on right: 16 17 18 19 40 61
    config_entry_start (58)
        on left: 20
        on right: 21
    config_stmt (59)
        on left: 21
        on right: 8 17
    menuconfig_entry_start (60)
        on left: 22
        on right: 23
    menuconfig_stmt (61)
        on left: 23
        on right: 11
    config_option_list (62)
        on left: 24 25 26 27
        on right: 21 23 25 26 27
    config_option (63)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 25
    choice (64)
        on left: 37
        on right: 38
    choice_entry <menu> (65)
        on left: 38
        on right: 40
    choice_end (66)
        on left: 39
        on right: 40
    choice_stmt (67)
        on left: 40
        on right: 6
    choice_option_list (68)
        on left: 41 42 43 44
        on right: 38 42 43 44
    choice_option (69)
        on left: 45 46 47 48
        on right: 42
    type <type> (70)
        on left: 49 50 51 52
        on right: 28
    logic_type <type> (71)
        on left: 53 54
        on right: 46 49
    default <type> (72)
        on left: 55 56 57
        on right: 30
    if_entry <menu> (73)
        on left: 58
        on right: 60 61
    if_end (74)
        on left: 59
        on right: 60 61
    if_stmt (75)
        on left: 60
        on right: 9
    if_stmt_in_choice (76)
        on left: 61
        on right: 18
    menu (77)
        on left: 62
        on right: 63
    menu_entry <menu> (78)
        on left: 63
        on right: 65
    menu_end (79)
        on left: 64
        on right: 65
    menu_stmt (80)
        on left: 65
        on right: 10
    menu_option_list (81)
        on left: 66 67 68
        on right: 63 67 68
    source_stmt (82)
        on left: 69
        on right: 12
    comment (83)
        on left: 70
        on right: 71
    comment_stmt (84)
        on left: 71
        on right: 7 16
    comment_option_list (85)
        on left: 72 73
        on right: 71 73
    help_start (86)
        on left: 74
        on right: 75
    help (87)
        on left: 75
        on right: 27 44
    depends (88)
        on left: 76
        on right: 26 43 68 73
    visible (89)
        on left: 77
        on right: 67
    prompt_stmt_opt (90)
        on left: 78 79
        on right: 28 46
    end <string> (91)
        on left: 80 81 82
        on right: 39 59 64
    if_expr <expr> (92)
        on left: 83 84
        on right: 29 30 31 32 33 45 48 77 79
    expr <expr> (93)
        on left: 85 86 87 88 89 90 91 92 93 94 95
        on right: 30 58 76 84 92 93 94 95
    nonconst_symbol <symbol> (94)
        on left: 96
        on right: 20 22 31 32 48 97
    symbol <symbol> (95)
        on left: 97 98
        on right: 33 85 86 87 88 89 90 91
    word_opt <string> (96)
        on left: 99 100
        on right: 37
    assignment_stmt (97)
        on left: 101
        on right: 5
    assign_op <flavor> (98)
        on left: 102 103 104
        on right: 101
    assign_val <string> (99)
        on left: 105 106
        on right: 101


State 0

    0 $accept: • input $end

    T_MAINMENU  shift, and go to state 1

    $default  reduce using rule 4 (stmt_list)

    input          go to state 2
    mainmenu_stmt  go to state 3
    stmt_list      go to state 4


State 1

    3 mainmenu_stmt: T_MAINMENU • T_WORD_QUOTE T_EOL

    T_WORD_QUOTE  shift, and go to state 5


State 2

    0 $accept: input • $end

    $end  shift, and go to state 6


State 3

    1 input: mainmenu_stmt • stmt_list

    $default  reduce using rule 4 (stmt_list)

    stmt_list  go to state 7


State 4

    2 input: stmt_list •
    5 stmt_list: stmt_list • assignment_stmt
    6          | stmt_list • choice_stmt
    7          | stmt_list • comment_stmt
    8          | stmt_list • config_stmt
    9          | stmt_list • if_stmt
   10          | stmt_list • menu_stmt
   11          | stmt_list • menuconfig_stmt
   12          | stmt_list • source_stmt
   13          | stmt_list • T_WORD error T_EOL
   14          | stmt_list • error T_EOL

    error         shift, and go to state 8
    T_WORD        shift, and go to state 9
    T_CHOICE      shift, and go to state 10
    T_COMMENT     shift, and go to state 11
    T_CONFIG      shift, and go to state 12
    T_IF          shift, and go to state 13
    T_MENU        shift, and go to state 14
    T_MENUCONFIG  shift, and go to state 15
    T_SOURCE      shift, and go to state 16

    $end  reduce using rule 2 (input)

    config_entry_start      go to state 17
    config_stmt             go to state 18
    menuconfig_entry_start  go to state 19
    menuconfig_stmt         go to state 20
    choice                  go to state 21
    choice_entry            go to state 22
    choice_stmt             go to state 23
    if_entry                go to state 24
    if_stmt                 go to state 25
    menu                    go to state 26
    menu_entry              go to state 27
    menu_stmt               go to state 28
    source_stmt             go to state 29
    comment                 go to state 30
    comment_stmt            go to state 31
    assignment_stmt         go to state 32


State 5

    3 mainmenu_stmt: T_MAINMENU T_WORD_QUOTE • T_EOL

    T_EOL  shift, and go to state 33


State 6

    0 $accept: input $end •

    $default  accept


State 7

    1 input: mainmenu_stmt stmt_list •
    5 stmt_list: stmt_list • assignment_stmt
    6          | stmt_list • choice_stmt
    7          | stmt_list • comment_stmt
    8          | stmt_list • config_stmt
    9          | stmt_list • if_stmt
   10          | stmt_list • menu_stmt
   11          | stmt_list • menuconfig_stmt
   12          | stmt_list • source_stmt
   13          | stmt_list • T_WORD error T_EOL
   14          | stmt_list • error T_EOL

    error         shift, and go to state 8
    T_WORD        shift, and go to state 9
    T_CHOICE      shift, and go to state 10
    T_COMMENT     shift, and go to state 11
    T_CONFIG      shift, and go to state 12
    T_IF          shift, and go to state 13
    T_MENU        shift, and go to state 14
    T_MENUCONFIG  shift, and go to state 15
    T_SOURCE      shift, and go to state 16

    $end  reduce using rule 1 (input)

    config_entry_start      go to state 17
    config_stmt             go to state 18
    menuconfig_entry_start  go to state 19
    menuconfig_stmt         go to state 20
    choice                  go to state 21
    choice_entry            go to state 22
    choice_stmt             go to state 23
    if_entry                go to state 24
    if_stmt                 go to state 25
    menu                    go to state 26
    menu_entry              go to state 27
    menu_stmt               go to state 28
    source_stmt             go to state 29
    comment                 go to state 30
    comment_stmt            go to state 31
    assignment_stmt         go to state 32


State 8

   14 stmt_list: stmt_list error • T_EOL

    T_EOL  shift, and go to state 34


State 9

   13 stmt_list: stmt_list T_WORD • error T_EOL
  101 assignment_stmt: T_WORD • assign_op assign_val T_EOL

    error          shift, and go to state 35
    T_COLON_EQUAL  shift, and go to state 36
    T_PLUS_EQUAL   shift, and go to state 37
    T_EQUAL        shift, and go to state 38

    assign_op  go to state 39


State 10

   37 choice: T_CHOICE • word_opt T_EOL

    T_WORD  shift, and go to state 40

    $default  reduce using rule 99 (word_opt)

    word_opt  go to state 41


State 11

   70 comment: T_COMMENT • T_WORD_QUOTE T_EOL

    T_WORD_QUOTE  shift, and go to state 42


State 12

   20 config_entry_start: T_CONFIG • nonconst_symbol T_EOL

    T_WORD  shift, and go to state 43

    nonconst_symbol  go to state 44


State 13

   58 if_entry: T_IF • expr T_EOL

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45
    T_OPEN_PAREN  shift, and go to state 46
    T_NOT         shift, and go to state 47

    expr             go to state 48
    nonconst_symbol  go to state 49
    symbol           go to state 50


State 14

   62 menu: T_MENU • T_WORD_QUOTE T_EOL

    T_WORD_QUOTE  shift, and go to state 51


State 15

   22 menuconfig_entry_start: T_MENUCONFIG • nonconst_symbol T_EOL

    T_WORD  shift, and go to state 43

    nonconst_symbol  go to state 52


State 16

   69 source_stmt: T_SOURCE • T_WORD_QUOTE T_EOL

    T_WORD_QUOTE  shift, and go to state 53


State 17

   21 config_stmt: config_entry_start • config_option_list

    $default  reduce using rule 24 (config_option_list)

    config_option_list  go to state 54


State 18

    8 stmt_list: stmt_list config_stmt •

    $default  reduce using rule 8 (stmt_list)


State 19

   23 menuconfig_stmt: menuconfig_entry_start • config_option_list

    $default  reduce using rule 24 (config_option_list)

    config_option_list  go to state 55


State 20

   11 stmt_list: stmt_list menuconfig_stmt •

    $default  reduce using rule 11 (stmt_list)


State 21

   38 choice_entry: choice • choice_option_list

    $default  reduce using rule 41 (choice_option_list)

    choice_option_list  go to state 56


State 22

   40 choice_stmt: choice_entry • stmt_list_in_choice choice_end

    $default  reduce using rule 15 (stmt_list_in_choice)

    stmt_list_in_choice  go to state 57


State 23

    6 stmt_list: stmt_list choice_stmt •

    $default  reduce using rule 6 (stmt_list)


State 24

   60 if_stmt: if_entry • stmt_list if_end

    $default  reduce using rule 4 (stmt_list)

    stmt_list  go to state 58


State 25

    9 stmt_list: stmt_list if_stmt •

    $default  reduce using rule 9 (stmt_list)


State 26

   63 menu_entry: menu • menu_option_list

    $default  reduce using rule 66 (menu_option_list)

    menu_option_list  go to state 59


State 27

   65 menu_stmt: menu_entry • stmt_list menu_end

    $default  reduce using rule 4 (stmt_list)

    stmt_list  go to state 60


State 28

   10 stmt_list: stmt_list menu_stmt •

    $default  reduce using rule 10 (stmt_list)


State 29

   12 stmt_list: stmt_list source_stmt •

    $default  reduce using rule 12 (stmt_list)


State 30

   71 comment_stmt: comment • comment_option_list

    $default  reduce using rule 72 (comment_option_list)

    comment_option_list  go to state 61


State 31

    7 stmt_list: stmt_list comment_stmt •

    $default  reduce using rule 7 (stmt_list)


State 32

    5 stmt_list: stmt_list assignment_stmt •

    $default  reduce using rule 5 (stmt_list)


State 33

    3 mainmenu_stmt: T_MAINMENU T_WORD_QUOTE T_EOL •

    $default  reduce using rule 3 (mainmenu_stmt)


State 34

   14 stmt_list: stmt_list error T_EOL •

    $default  reduce using rule 14 (stmt_list)


State 35

   13 stmt_list: stmt_list T_WORD error • T_EOL

    T_EOL  shift, and go to state 62


State 36

  103 assign_op: T_COLON_EQUAL •

    $default  reduce using rule 103 (assign_op)


State 37

  104 assign_op: T_PLUS_EQUAL •

    $default  reduce using rule 104 (assign_op)


State 38

  102 assign_op: T_EQUAL •

    $default  reduce using rule 102 (assign_op)


State 39

  101 assignment_stmt: T_WORD assign_op • assign_val T_EOL

    T_ASSIGN_VAL  shift, and go to state 63

    $default  reduce using rule 105 (assign_val)

    assign_val  go to state 64


State 40

  100 word_opt: T_WORD •

    $default  reduce using rule 100 (word_opt)


State 41

   37 choice: T_CHOICE word_opt • T_EOL

    T_EOL  shift, and go to state 65


State 42

   70 comment: T_COMMENT T_WORD_QUOTE • T_EOL

    T_EOL  shift, and go to state 66


State 43

   96 nonconst_symbol: T_WORD •

    $default  reduce using rule 96 (nonconst_symbol)


State 44

   20 config_entry_start: T_CONFIG nonconst_symbol • T_EOL

    T_EOL  shift, and go to state 67


State 45

   98 symbol: T_WORD_QUOTE •

    $default  reduce using rule 98 (symbol)


State 46

   92 expr: T_OPEN_PAREN • expr T_CLOSE_PAREN

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45
    T_OPEN_PAREN  shift, and go to state 46
    T_NOT         shift, and go to state 47

    expr             go to state 68
    nonconst_symbol  go to state 49
    symbol           go to state 50


State 47

   93 expr: T_NOT • expr

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45
    T_OPEN_PAREN  shift, and go to state 46
    T_NOT         shift, and go to state 47

    expr             go to state 69
    nonconst_symbol  go to state 49
    symbol           go to state 50


State 48

   58 if_entry: T_IF expr • T_EOL
   94 expr: expr • T_OR expr
   95     | expr • T_AND expr

    T_EOL  shift, and go to state 70
    T_OR   shift, and go to state 71
    T_AND  shift, and go to state 72


State 49

   97 symbol: nonconst_symbol •

    $default  reduce using rule 97 (symbol)


State 50

   85 expr: symbol •
   86     | symbol • T_LESS symbol
   87     | symbol • T_LESS_EQUAL symbol
   88     | symbol • T_GREATER symbol
   89     | symbol • T_GREATER_EQUAL symbol
   90     | symbol • T_EQUAL symbol
   91     | symbol • T_UNEQUAL symbol

    T_EQUAL          shift, and go to state 73
    T_UNEQUAL        shift, and go to state 74
    T_LESS           shift, and go to state 75
    T_LESS_EQUAL     shift, and go to state 76
    T_GREATER        shift, and go to state 77
    T_GREATER_EQUAL  shift, and go to state 78

    $default  reduce using rule 85 (expr)


State 51

   62 menu: T_MENU T_WORD_QUOTE • T_EOL

    T_EOL  shift, and go to state 79


State 52

   22 menuconfig_entry_start: T_MENUCONFIG nonconst_symbol • T_EOL

    T_EOL  shift, and go to state 80


State 53

   69 source_stmt: T_SOURCE T_WORD_QUOTE • T_EOL

    T_EOL  shift, and go to state 81


State 54

   21 config_stmt: config_entry_start config_option_list •
   25 config_option_list: config_option_list • config_option
   26                   | config_option_list • depends
   27                   | config_option_list • help

    T_BOOL          shift, and go to state 82
    T_DEFAULT       shift, and go to state 83
    T_DEF_BOOL      shift, and go to state 84
    T_DEF_TRISTATE  shift, and go to state 85
    T_DEPENDS       shift, and go to state 86
    T_HELP          shift, and go to state 87
    T_HEX           shift, and go to state 88
    T_IMPLY         shift, and go to state 89
    T_INT           shift, and go to state 90
    T_OPTION        shift, and go to state 91
    T_PROMPT        shift, and go to state 92
    T_RANGE         shift, and go to state 93
    T_SELECT        shift, and go to state 94
    T_STRING        shift, and go to state 95
    T_TRISTATE      shift, and go to state 96

    $default  reduce using rule 21 (config_stmt)

    config_option  go to state 97
    type           go to state 98
    logic_type     go to state 99
    default        go to state 100
    help_start     go to state 101
    help           go to state 102
    depends        go to state 103


State 55

   23 menuconfig_stmt: menuconfig_entry_start config_option_list •
   25 config_option_list: config_option_list • config_option
   26                   | config_option_list • depends
   27                   | config_option_list • help

    T_BOOL          shift, and go to state 82
    T_DEFAULT       shift, and go to state 83
    T_DEF_BOOL      shift, and go to state 84
    T_DEF_TRISTATE  shift, and go to state 85
    T_DEPENDS       shift, and go to state 86
    T_HELP          shift, and go to state 87
    T_HEX           shift, and go to state 88
    T_IMPLY         shift, and go to state 89
    T_INT           shift, and go to state 90
    T_OPTION        shift, and go to state 91
    T_PROMPT        shift, and go to state 92
    T_RANGE         shift, and go to state 93
    T_SELECT        shift, and go to state 94
    T_STRING        shift, and go to state 95
    T_TRISTATE      shift, and go to state 96

    $default  reduce using rule 23 (menuconfig_stmt)

    config_option  go to state 97
    type           go to state 98
    logic_type     go to state 99
    default        go to state 100
    help_start     go to state 101
    help           go to state 102
    depends        go to state 103


State 56

   38 choice_entry: choice choice_option_list •
   42 choice_option_list: choice_option_list • choice_option
   43                   | choice_option_list • depends
   44                   | choice_option_list • help

    T_BOOL      shift, and go to state 82
    T_DEFAULT   shift, and go to state 104
    T_DEPENDS   shift, and go to state 86
    T_HELP      shift, and go to state 87
    T_OPTIONAL  shift, and go to state 105
    T_PROMPT    shift, and go to state 106
    T_TRISTATE  shift, and go to state 96

    $default  reduce using rule 38 (choice_entry)

    choice_option  go to state 107
    logic_type     go to state 108
    help_start     go to state 101
    help           go to state 109
    depends        go to state 110


State 57

   16 stmt_list_in_choice: stmt_list_in_choice • comment_stmt
   17                    | stmt_list_in_choice • config_stmt
   18                    | stmt_list_in_choice • if_stmt_in_choice
   19                    | stmt_list_in_choice • error T_EOL
   40 choice_stmt: choice_entry stmt_list_in_choice • choice_end

    error        shift, and go to state 111
    T_COMMENT    shift, and go to state 11
    T_CONFIG     shift, and go to state 12
    T_ENDCHOICE  shift, and go to state 112
    T_ENDIF      shift, and go to state 113
    T_ENDMENU    shift, and go to state 114
    T_IF         shift, and go to state 13

    config_entry_start  go to state 17
    config_stmt         go to state 115
    choice_end          go to state 116
    if_entry            go to state 117
    if_stmt_in_choice   go to state 118
    comment             go to state 30
    comment_stmt        go to state 119
    end                 go to state 120


State 58

    5 stmt_list: stmt_list • assignment_stmt
    6          | stmt_list • choice_stmt
    7          | stmt_list • comment_stmt
    8          | stmt_list • config_stmt
    9          | stmt_list • if_stmt
   10          | stmt_list • menu_stmt
   11          | stmt_list • menuconfig_stmt
   12          | stmt_list • source_stmt
   13          | stmt_list • T_WORD error T_EOL
   14          | stmt_list • error T_EOL
   60 if_stmt: if_entry stmt_list • if_end

    error         shift, and go to state 8
    T_WORD        shift, and go to state 9
    T_CHOICE      shift, and go to state 10
    T_COMMENT     shift, and go to state 11
    T_CONFIG      shift, and go to state 12
    T_ENDCHOICE   shift, and go to state 112
    T_ENDIF       shift, and go to state 113
    T_ENDMENU     shift, and go to state 114
    T_IF          shift, and go to state 13
    T_MENU        shift, and go to state 14
    T_MENUCONFIG  shift, and go to state 15
    T_SOURCE      shift, and go to state 16

    config_entry_start      go to state 17
    config_stmt             go to state 18
    menuconfig_entry_start  go to state 19
    menuconfig_stmt         go to state 20
    choice                  go to state 21
    choice_entry            go to state 22
    choice_stmt             go to state 23
    if_entry                go to state 24
    if_end                  go to state 121
    if_stmt                 go to state 25
    menu                    go to state 26
    menu_entry              go to state 27
    menu_stmt               go to state 28
    source_stmt             go to state 29
    comment                 go to state 30
    comment_stmt            go to state 31
    end                     go to state 122
    assignment_stmt         go to state 32


State 59

   63 menu_entry: menu menu_option_list •
   67 menu_option_list: menu_option_list • visible
   68                 | menu_option_list • depends

    T_DEPENDS  shift, and go to state 86
    T_VISIBLE  shift, and go to state 123

    $default  reduce using rule 63 (menu_entry)

    depends  go to state 124
    visible  go to state 125


State 60

    5 stmt_list: stmt_list • assignment_stmt
    6          | stmt_list • choice_stmt
    7          | stmt_list • comment_stmt
    8          | stmt_list • config_stmt
    9          | stmt_list • if_stmt
   10          | stmt_list • menu_stmt
   11          | stmt_list • menuconfig_stmt
   12          | stmt_list • source_stmt
   13          | stmt_list • T_WORD error T_EOL
   14          | stmt_list • error T_EOL
   65 menu_stmt: menu_entry stmt_list • menu_end

    error         shift, and go to state 8
    T_WORD        shift, and go to state 9
    T_CHOICE      shift, and go to state 10
    T_COMMENT     shift, and go to state 11
    T_CONFIG      shift, and go to state 12
    T_ENDCHOICE   shift, and go to state 112
    T_ENDIF       shift, and go to state 113
    T_ENDMENU     shift, and go to state 114
    T_IF          shift, and go to state 13
    T_MENU        shift, and go to state 14
    T_MENUCONFIG  shift, and go to state 15
    T_SOURCE      shift, and go to state 16

    config_entry_start      go to state 17
    config_stmt             go to state 18
    menuconfig_entry_start  go to state 19
    menuconfig_stmt         go to state 20
    choice                  go to state 21
    choice_entry            go to state 22
    choice_stmt             go to state 23
    if_entry                go to state 24
    if_stmt                 go to state 25
    menu                    go to state 26
    menu_entry              go to state 27
    menu_end                go to state 126
    menu_stmt               go to state 28
    source_stmt             go to state 29
    comment                 go to state 30
    comment_stmt            go to state 31
    end                     go to state 127
    assignment_stmt         go to state 32


State 61

   71 comment_stmt: comment comment_option_list •
   73 comment_option_list: comment_option_list • depends

    T_DEPENDS  shift, and go to state 86

    $default  reduce using rule 71 (comment_stmt)

    depends  go to state 128


State 62

   13 stmt_list: stmt_list T_WORD error T_EOL •

    $default  reduce using rule 13 (stmt_list)


State 63

  106 assign_val: T_ASSIGN_VAL •

    $default  reduce using rule 106 (assign_val)


State 64

  101 assignment_stmt: T_WORD assign_op assign_val • T_EOL

    T_EOL  shift, and go to state 129


State 65

   37 choice: T_CHOICE word_opt T_EOL •

    $default  reduce using rule 37 (choice)


State 66

   70 comment: T_COMMENT T_WORD_QUOTE T_EOL •

    $default  reduce using rule 70 (comment)


State 67

   20 config_entry_start: T_CONFIG nonconst_symbol T_EOL •

    $default  reduce using rule 20 (config_entry_start)


State 68

   92 expr: T_OPEN_PAREN expr • T_CLOSE_PAREN
   94     | expr • T_OR expr
   95     | expr • T_AND expr

    T_CLOSE_PAREN  shift, and go to state 130
    T_OR           shift, and go to state 71
    T_AND          shift, and go to state 72


State 69

   93 expr: T_NOT expr •
   94     | expr • T_OR expr
   95     | expr • T_AND expr

    $default  reduce using rule 93 (expr)


State 70

   58 if_entry: T_IF expr T_EOL •

    $default  reduce using rule 58 (if_entry)


State 71

   94 expr: expr T_OR • expr

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45
    T_OPEN_PAREN  shift, and go to state 46
    T_NOT         shift, and go to state 47

    expr             go to state 131
    nonconst_symbol  go to state 49
    symbol           go to state 50


State 72

   95 expr: expr T_AND • expr

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45
    T_OPEN_PAREN  shift, and go to state 46
    T_NOT         shift, and go to state 47

    expr             go to state 132
    nonconst_symbol  go to state 49
    symbol           go to state 50


State 73

   90 expr: symbol T_EQUAL • symbol

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 133


State 74

   91 expr: symbol T_UNEQUAL • symbol

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 134


State 75

   86 expr: symbol T_LESS • symbol

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 135


State 76

   87 expr: symbol T_LESS_EQUAL • symbol

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 136


State 77

   88 expr: symbol T_GREATER • symbol

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 137


State 78

   89 expr: symbol T_GREATER_EQUAL • symbol

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 138


State 79

   62 menu: T_MENU T_WORD_QUOTE T_EOL •

    $default  reduce using rule 62 (menu)


State 80

   22 menuconfig_entry_start: T_MENUCONFIG nonconst_symbol T_EOL •

    $default  reduce using rule 22 (menuconfig_entry_start)


State 81

   69 source_stmt: T_SOURCE T_WORD_QUOTE T_EOL •

    $default  reduce using rule 69 (source_stmt)


State 82

   53 logic_type: T_BOOL •

    $default  reduce using rule 53 (logic_type)


State 83

   55 default: T_DEFAULT •

    $default  reduce using rule 55 (default)


State 84

   56 default: T_DEF_BOOL •

    $default  reduce using rule 56 (default)


State 85

   57 default: T_DEF_TRISTATE •

    $default  reduce using rule 57 (default)


State 86

   76 depends: T_DEPENDS • T_ON expr T_EOL

    T_ON  shift, and go to state 139


State 87

   74 help_start: T_HELP • T_EOL

    T_EOL  shift, and go to state 140


State 88

   51 type: T_HEX •

    $default  reduce using rule 51 (type)


State 89

   32 config_option: T_IMPLY • nonconst_symbol if_expr T_EOL

    T_WORD  shift, and go to state 43

    nonconst_symbol  go to state 141


State 90

   50 type: T_INT •

    $default  reduce using rule 50 (type)


State 91

   34 config_option: T_OPTION • T_MODULES T_EOL
   35              | T_OPTION • T_DEFCONFIG_LIST T_EOL
   36              | T_OPTION • T_ALLNOCONFIG_Y T_EOL

    T_ALLNOCONFIG_Y   shift, and go to state 142
    T_DEFCONFIG_LIST  shift, and go to state 143
    T_MODULES         shift, and go to state 144


State 92

   29 config_option: T_PROMPT • T_WORD_QUOTE if_expr T_EOL

    T_WORD_QUOTE  shift, and go to state 145


State 93

   33 config_option: T_RANGE • symbol symbol if_expr T_EOL

    T_WORD        shift, and go to state 43
    T_WORD_QUOTE  shift, and go to state 45

    nonconst_symbol  go to state 49
    symbol           go to state 146


State 94

   31 config_option: T_SELECT • nonconst_symbol if_expr T_EOL

    T_WORD  shift, and go to state 43

    nonconst_symbol  go to state 147


State 95

   52 type: T_STRING •

    $default  reduce using rule 52 (type)


State 96

   54 logic_type: T_TRISTATE •

    $default  reduce using rule 54 (logic_type)


State 97
